--- a/index.html
+++ b/index.html
@@ -322,6 +322,60 @@
             </div>
             <div id="forumQuestions">
                 <div id="questionsHeader"><strong>Latest questions</strong></div>
+                <div class="container" style="margin-top: 35px">
+                    <table class="table forum table-striped">
+                        <tbody>
+                        <tr>
+                            <td class="text-center hidden-xs hidden-sm">Theme</td>
+
+                            <td>
+                                <h4>Questions</h4>
+                            </td>
+                            <td class="text-center hidden-xs hidden-sm">Comments</td>
+                            <td class="text-center hidden-xs hidden-sm">Date</td>
+                            <td class="hidden-xs hidden-sm">User</td>
+                        </tr>
+                        <tr>
+                            <td class="text-center"><i class="fa fa-question fa-2x text-primary"></i></td>
+                            <td>
+                                <h4><a href="#">Frequently Asked Questions</a></h4>
+                            </td>
+                            <td class="text-center hidden-xs hidden-sm">comments</a></td>
+                            <td class="text-center hidden-xs hidden-sm">date</a></td>
+                            <td class="hidden-xs hidden-sm">by <a href="#">user that created this question</a></td>
+                        </tr>
+                        <tr>
+                            <td class="text-center"><i class="fa fa-question fa-2x text-primary"></i></td>
+                            <td>
+                                <h4><a href="#">#1</a></h4>
+                            </td>
+                            <td class="text-center hidden-xs hidden-sm">comments</a></td>
+                            <td class="text-center hidden-xs hidden-sm">date</a></td>
+                            <td class="hidden-xs hidden-sm">by <a href="#">user that created this question</a></td>
+                        </tr>
+                        <tr>
+                            <td class="text-center"><i class="fa fa-question fa-2x text-primary"></i></td>
+                            <td>
+                                <h4><a href="#">#2</a></h4>
+                            </td>
+                            <td class="text-center hidden-xs hidden-sm">comments</a></td>
+                            <td class="text-center hidden-xs hidden-sm">date</a></td>
+                            <td class="hidden-xs hidden-sm">by <a href="#">user that created this question</a></td>
+                        </tr>
+                        <tr>
+                            <td class="text-center"><i class="fa fa-question fa-2x text-primary"></i></td>
+                            <td>
+                                <h4><a href="#">#3</a></h4>
+                            </td>
+                            <td class="text-center hidden-xs hidden-sm">comments</a></td>
+                            <td class="text-center hidden-xs hidden-sm">date</a></td>
+                            <td class="hidden-xs hidden-sm">by <a href="#">user that created this question</a></td>
+                        </tr>
+                        </tbody>
+                    </table>
+
+                </div>
+            </div>
             </div>
         </div>
     </section>
