--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
                             <td class="hidden-xs hidden-sm">User</td>
                         </tr>
                         <tr>
-                            <td class="text-center"><i class="fa fa-question fa-2x text-primary"></i></td>
+                            <td class="text-center"><i class="fa fa-music fa-2x text-primary"></i></td>
                             <td>
                                 <h4><a href="#">Frequently Asked Questions</a></h4>
                             </td>
@@ -345,7 +345,7 @@
                             <td class="hidden-xs hidden-sm">by <a href="#">user that created this question</a></td>
                         </tr>
                         <tr>
-                            <td class="text-center"><i class="fa fa-question fa-2x text-primary"></i></td>
+                            <td class="text-center"><i class="fa fa-gamepad  fa-2x text-primary"></i></td>
                             <td>
                                 <h4><a href="#">#1</a></h4>
                             </td>
@@ -354,7 +354,7 @@
                             <td class="hidden-xs hidden-sm">by <a href="#">user that created this question</a></td>
                         </tr>
                         <tr>
-                            <td class="text-center"><i class="fa fa-question fa-2x text-primary"></i></td>
+                            <td class="text-center"><i class="fa fa-graduation-cap fa-2x text-primary"></i></td>
                             <td>
                                 <h4><a href="#">#2</a></h4>
                             </td>
@@ -363,9 +363,18 @@
                             <td class="hidden-xs hidden-sm">by <a href="#">user that created this question</a></td>
                         </tr>
                         <tr>
-                            <td class="text-center"><i class="fa fa-question fa-2x text-primary"></i></td>
+                            <td class="text-center"><i class="fa fa-leaf fa-2x text-primary"></i></i></td>
                             <td>
                                 <h4><a href="#">#3</a></h4>
+                            </td>
+                            <td class="text-center hidden-xs hidden-sm">comments</a></td>
+                            <td class="text-center hidden-xs hidden-sm">date</a></td>
+                            <td class="hidden-xs hidden-sm">by <a href="#">user that created this question</a></td>
+                        </tr>
+                        <tr>
+                            <td class="text-center"><i class="fa fa-futbol-o fa-2x text-primary"></i></i></td>
+                            <td>
+                                <h4><a href="#">#4</a></h4>
                             </td>
                             <td class="text-center hidden-xs hidden-sm">comments</a></td>
                             <td class="text-center hidden-xs hidden-sm">date</a></td>
