--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         </div>
         <div id="errorBox" class="errorBox">Error</div>
         <div id="infoBox" class="infoBox">Info</div>
+        <div id="warningBox" class="warningBox">Warning</div>
 
     </nav>
 
@@ -391,7 +392,7 @@
 
     <section id="questionsAndComments">
         <div id="questionsAndCommentsHeader"></div>
-        <div id="questionsAndCommentsHeaderBody" >
+        <div id="questionsAndCommentsHeaderBody" />
     </section>
 
     <section id="profile">
