--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
             <div id="forumQuestions">
                 <div id="questionsHeader"><strong>Latest questions</strong></div>
                 <div class="container" style="margin-top: 35px">
-                    <table class="table forum table-striped">
+                    <table class="table forum table-striped" id="questionsTable">
                         <tbody>
                         <tr>
                             <td class="text-center hidden-xs hidden-sm">Theme</td>
