--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                 <div id="questionsHeader"><strong>Latest questions</strong></div>
                 <div class="container" style="margin-top: 35px">
                     <table class="table forum table-striped" id="questionsTable">
-                        <tbody>
+                        <thead>
                         <tr>
                             <td class="text-center hidden-xs hidden-sm">Theme</td>
 
@@ -336,51 +336,10 @@
                             <td class="text-center hidden-xs hidden-sm">Date</td>
                             <td class="hidden-xs hidden-sm">User</td>
                         </tr>
-                        <tr>
-                            <td class="text-center"><i class="fa fa-music fa-2x text-primary"></i></td>
-                            <td>
-                                <h4><a href="#">Frequently Asked Questions</a></h4>
-                            </td>
-                            <td class="text-center hidden-xs hidden-sm">comments</a></td>
-                            <td class="text-center hidden-xs hidden-sm">date</a></td>
-                            <td class="hidden-xs hidden-sm">by <a href="#">user that created this question</a></td>
-                        </tr>
-                        <tr>
-                            <td class="text-center"><i class="fa fa-gamepad  fa-2x text-primary"></i></td>
-                            <td>
-                                <h4><a href="#">#1</a></h4>
-                            </td>
-                            <td class="text-center hidden-xs hidden-sm">comments</a></td>
-                            <td class="text-center hidden-xs hidden-sm">date</a></td>
-                            <td class="hidden-xs hidden-sm">by <a href="#">user that created this question</a></td>
-                        </tr>
-                        <tr>
-                            <td class="text-center"><i class="fa fa-graduation-cap fa-2x text-primary"></i></td>
-                            <td>
-                                <h4><a href="#">#2</a></h4>
-                            </td>
-                            <td class="text-center hidden-xs hidden-sm">comments</a></td>
-                            <td class="text-center hidden-xs hidden-sm">date</a></td>
-                            <td class="hidden-xs hidden-sm">by <a href="#">user that created this question</a></td>
-                        </tr>
-                        <tr>
-                            <td class="text-center"><i class="fa fa-leaf fa-2x text-primary"></i></i></td>
-                            <td>
-                                <h4><a href="#">#3</a></h4>
-                            </td>
-                            <td class="text-center hidden-xs hidden-sm">comments</a></td>
-                            <td class="text-center hidden-xs hidden-sm">date</a></td>
-                            <td class="hidden-xs hidden-sm">by <a href="#">user that created this question</a></td>
-                        </tr>
-                        <tr>
-                            <td class="text-center"><i class="fa fa-futbol-o fa-2x text-primary"></i></i></td>
-                            <td>
-                                <h4><a href="#">#4</a></h4>
-                            </td>
-                            <td class="text-center hidden-xs hidden-sm">comments</a></td>
-                            <td class="text-center hidden-xs hidden-sm">date</a></td>
-                            <td class="hidden-xs hidden-sm">by <a href="#">user that created this question</a></td>
-                        </tr>
+                        </thead>
+                        <tbody>
+
+
                         </tbody>
                     </table>
 
@@ -409,9 +368,9 @@
                                     <h2></h2>
                                 </div>
                                 <ul class="unstyled">
-                                    <li id="one"><i class="icon-phone"></i></li>
-                                    <li id="two"><i class="icon-envelope"></i></li>
-                                    <li id="three"><i class="icon-globe"></i></li>
+                                    <li id="one"><i class="fa fa-phone-square"></i></li>
+                                    <li id="two"><i class="fa fa-envelope"></i></li>
+                                    <li id="three"><i class="fa fa-facebook-official"></i></i></li>
 
                                 </ul>
                             </div>
@@ -451,8 +410,48 @@
                 </div>
             </div>
         </div>
+    </section>
+    <section id="searchedProfile" style="display: none">
+        <div class="container profile">
+            <div class="row">
+                <div class="span12">
+                    <div class="well well-small clearfix">
+                        <div class="row-fluid">
+                            <div class="span2">
+                                <img src="img/profile%20picture.png" width="125px" height="125px" class="img-polaroid"/>
+                            </div>
+                            <div class="span4">
+                                <div id="profileZero">
+                                    <h2></h2>
+                                </div>
+                                <ul class="unstyled">
+                                    <li id="profileOne"><i class="fa fa-phone-square"></i></li>
+                                    <li id="profileTwo"><i class="fa fa-envelope"></i></li>
+                                    <li id="profileThree"><i class="fa fa-facebook-official"></i></i></li>
+
+                                </ul>
+                            </div>
+                            <ul class="inline stats">
+                                <li>
+                                    <span id="profileSearchedQuestions">0</span>
+                                    <h5>Questions</h5>
+                                </li>
+                                <li>
+                                    <span id="profileSearchedComments">0</span>
+                                    <h5>Comments</h5>
+                                </li>
+
+                            </ul>
+                        </div>
+                        <button type="button" id="goNormal">
+                            Back
+                        </button>
+                    </div>
+                </div>
+
+            </div>
         </div>
-        </div>
+
     </section>
     <footer>
         <div class="container">
