--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 
 <head>
 
@@ -23,6 +23,7 @@
 
     <script src="js/jquery-3.1.1.min.js"></script>
     <script src="js/jquery-3.1.1.js"></script>
+    <script src="js/comments.js"></script>
 
 
 </head>
@@ -336,51 +337,7 @@
                             <td class="text-center hidden-xs hidden-sm">Date</td>
                             <td class="hidden-xs hidden-sm">User</td>
                         </tr>
-                        <tr>
-                            <td class="text-center"><i class="fa fa-music fa-2x text-primary"></i></td>
-                            <td>
-                                <h4><a href="#">Frequently Asked Questions</a></h4>
-                            </td>
-                            <td class="text-center hidden-xs hidden-sm">comments</a></td>
-                            <td class="text-center hidden-xs hidden-sm">date</a></td>
-                            <td class="hidden-xs hidden-sm">by <a href="#">user that created this question</a></td>
-                        </tr>
-                        <tr>
-                            <td class="text-center"><i class="fa fa-gamepad  fa-2x text-primary"></i></td>
-                            <td>
-                                <h4><a href="#">#1</a></h4>
-                            </td>
-                            <td class="text-center hidden-xs hidden-sm">comments</a></td>
-                            <td class="text-center hidden-xs hidden-sm">date</a></td>
-                            <td class="hidden-xs hidden-sm">by <a href="#">user that created this question</a></td>
-                        </tr>
-                        <tr>
-                            <td class="text-center"><i class="fa fa-graduation-cap fa-2x text-primary"></i></td>
-                            <td>
-                                <h4><a href="#">#2</a></h4>
-                            </td>
-                            <td class="text-center hidden-xs hidden-sm">comments</a></td>
-                            <td class="text-center hidden-xs hidden-sm">date</a></td>
-                            <td class="hidden-xs hidden-sm">by <a href="#">user that created this question</a></td>
-                        </tr>
-                        <tr>
-                            <td class="text-center"><i class="fa fa-leaf fa-2x text-primary"></i></i></td>
-                            <td>
-                                <h4><a href="#">#3</a></h4>
-                            </td>
-                            <td class="text-center hidden-xs hidden-sm">comments</a></td>
-                            <td class="text-center hidden-xs hidden-sm">date</a></td>
-                            <td class="hidden-xs hidden-sm">by <a href="#">user that created this question</a></td>
-                        </tr>
-                        <tr>
-                            <td class="text-center"><i class="fa fa-futbol-o fa-2x text-primary"></i></i></td>
-                            <td>
-                                <h4><a href="#">#4</a></h4>
-                            </td>
-                            <td class="text-center hidden-xs hidden-sm">comments</a></td>
-                            <td class="text-center hidden-xs hidden-sm">date</a></td>
-                            <td class="hidden-xs hidden-sm">by <a href="#">user that created this question</a></td>
-                        </tr>
+
                         </tbody>
                     </table>
 
@@ -391,8 +348,18 @@
     </section>
 
     <section id="questionsAndComments">
-        <div id="questionsAndCommentsHeader"></div>
-        <div id="questionsAndCommentsHeaderBody" />
+        <div id="questionsAndCommentsBody">
+            <div id="questionsAndCommentsHeader"></div>
+            <hr>
+            <table id="questionComments">
+                <tr id="mainTr">
+                    <td id="commentHed">Comment</td>
+                    <td id="dateHed">Date</td>
+                    <td id="userHed">User</td>
+                </tr>
+
+            </table>
+        </div>
     </section>
 
     <section id="profile">
