--- a/index.html
+++ b/index.html
@@ -384,7 +384,6 @@
             </table>
         </div>
     </section>
-    <a name="bottom"></a>
     <section id="profile">
         <div class="container profile">
             <div class="row">
@@ -442,7 +441,7 @@
             </div>
         </div>
     </section>
-    <section id="searchedProfile" style="display: none">
+    <section id="searchedProfile" class="fck u" style="display: none">
         <div class="container profile">
             <div class="row">
                 <div class="span12">
